# QtPong

./: .gitignore  CMakeLists.txt  README.md  pong_de_DE.ts
src/: Controller.hxx  MainWindow.cxx  MainWindow.hxx  Player.cxx  Player.hxx  Pong.cxx  Pong.hxx  main.cxx  pong.qrc.in
